--- a/Resource/template/admin/config.twig
+++ b/Resource/template/admin/config.twig
@@ -72,7 +72,7 @@
                 <div class="row justify-content-between align-items-center">
                     <div class="col-6">
                         <div class="c-conversionArea__leftBlockItem">
-                            <a class="c-beseLink" href="{{ url('admin_store_plugin') }}"><i class="fa fa-backward" aria-hidden="true"></i>
+                            <a class="c-baseLink" href="{{ url('admin_store_plugin') }}"><i class="fa fa-backward" aria-hidden="true"></i>
                                 <span>{{ 'product_review.admin.config.conversion.back'|trans }}</span></a>
                         </div>
                     </div>
