--- a/Resource/template/default/index.twig
+++ b/Resource/template/default/index.twig
@@ -16,10 +16,16 @@ file that was distributed with this source code.
 
 {% block stylesheet %}
     <style>
-        #product_review_recommend_level > label {
-            display: block;
-            line-height: 0px;
-            margin: 0px;
+        #product_review_recommend_level {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+        }
+        #product_review_recommend_level label {
+            position: relative;
+            bottom: 18px;
+            left: 20px;
+            line-height: 0;
         }
     </style>
 {% endblock %}
@@ -38,7 +44,7 @@ file that was distributed with this source code.
                         {# 商品名 #}
                         <dl>
                             <dt>
-                                <label class="">{{ 'product_review.front.review.product_name'|trans }}</label>
+                                <label class="ec-label">{{ 'product_review.front.review.product_name'|trans }}</label>
                             </dt>
                             <dd>
                                 <div class="ec-input">
@@ -49,7 +55,7 @@ file that was distributed with this source code.
                         {# 投稿者名 #}
                         <dl>
                             <dt>
-                                {{ form_label(form.reviewer_name) }}
+                                {{ form_label(form.reviewer_name, '', {'label_attr': {'class': 'ec-label'}}) }}
                             </dt>
                             <dd>
                                 <div class="ec-input{{ has_errors(form.reviewer_name) ? ' error' }}">
@@ -61,7 +67,7 @@ file that was distributed with this source code.
                         {# 投稿者URL #}
                         <dl>
                             <dt>
-                                {{ form_label(form.reviewer_url) }}
+                                {{ form_label(form.reviewer_url, '', {'label_attr': {'class': 'ec-label'}}) }}
                             </dt>
                             <dd>
                                 <div class="ec-input{{ has_errors(form.reviewer_url) ? ' error' }}">
@@ -73,7 +79,7 @@ file that was distributed with this source code.
                         {# 性別 #}
                         <dl>
                             <dt>
-                                {{ form_label(form.sex) }}
+                                {{ form_label(form.sex, 'common.gender', {'label_attr': {'class': 'ec-label'}}) }}
                             </dt>
                             <dd>
                                 <div class="ec-radio{{ has_errors(form.sex) ? ' error' }}">
@@ -85,7 +91,7 @@ file that was distributed with this source code.
                         {# おすすめレベル #}
                         <dl>
                             <dt>
-                                {{ form_label(form.recommend_level) }}
+                                {{ form_label(form.recommend_level, '', {'label_attr': {'class': 'ec-label'}}) }}
                             </dt>
                             <dd>
                                 <div class="ec-radio{{ has_errors(form.recommend_level) ? ' error' }}">
@@ -97,7 +103,7 @@ file that was distributed with this source code.
                         {# タイトル #}
                         <dl>
                             <dt>
-                                {{ form_label(form.title) }}
+                                {{ form_label(form.title, '', {'label_attr': {'class': 'ec-label'}}) }}
                             </dt>
                             <dd>
                                 <div class="ec-input{{ has_errors(form.title) ? ' error' }}">
@@ -109,7 +115,7 @@ file that was distributed with this source code.
                         {# コメント #}
                         <dl>
                             <dt>
-                                {{ form_label(form.comment) }}
+                                {{ form_label(form.comment, '', {'label_attr': {'class': 'ec-label'}}) }}
                             </dt>
                             <dd>
                                 <div class="ec-input{{ has_errors(form.comment) ? ' error' }}">
