デザインを修正、テストケースの修正

--- a/Resource/template/default/review.twig
+++ b/Resource/template/default/review.twig
@@ -24,6 +24,7 @@
     #product_review_area {
         border-top: 1px solid #E8E8E8;
         padding-bottom: 0;
+        margin-bottom: 20px;
     }
 
     #product_review_area .ec-rectHeading {
@@ -34,6 +35,10 @@
 
     #product_review_area .ec-rectHeading.is_active i {
         transform: rotate(180deg);
+    }
+
+    #product_review_area .review_list {
+        padding-left: 25px;
     }
 
     #product_review_area .review_list li {
