--- a/Resource/template/admin/config.twig
+++ b/Resource/template/admin/config.twig
@@ -32,13 +32,13 @@
                         <div class="card-header">
                             <div class="row">
                                 <div class="col-8">
-                                    <div class="d-inline-block" data-toggle="tooltip" data-placement="top"
+                                    <div class="d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top"
                                          title="Tooltip">
                                         <span class="card-title">{{ 'product_review.admin.config.config_title'|trans }}</span>
                                     </div>
                                 </div>
                                 <div class="col-4 text-right">
-                                    <a data-toggle="collapse" href="#basicConfig" aria-expanded="false"
+                                    <a data-bs-toggle="collapse" href="#basicConfig" aria-expanded="false"
                                        aria-controls="basicConfig">
                                         <i class="fa fa-angle-up fa-lg"></i>
                                     </a>
