--- a/Resource/template/admin/edit.twig
+++ b/Resource/template/admin/edit.twig
@@ -33,7 +33,7 @@
                         <div class="card-header">
                             <div class="row">
                                 <div class="col-8">
-                                    <div class="d-inline-block" data-toggle="tooltip" data-placement="top"
+                                    <div class="d-inline-block" data-bs-toggle="tooltip" data-bs-placement="top"
                                          title="Tooltip">
                                     <span class="card-title">
                                         {{ 'product_review.admin.product_review_edit.review_detail'|trans() }}
@@ -41,7 +41,7 @@
                                     </div>
                                 </div>
                                 <div class="col-4 text-right">
-                                    <a data-toggle="collapse" href="#basicConfig" aria-expanded="false"
+                                    <a data-bs-toggle="collapse" href="#basicConfig" aria-expanded="false"
                                        aria-controls="basicConfig">
                                     </a>
                                 </div>
