template/admin/edit.twigのtypoの修正

--- a/Resource/template/admin/edit.twig
+++ b/Resource/template/admin/edit.twig
@@ -142,7 +142,7 @@
                     <div class="col-6">
                         <div class="c-conversionArea__leftBlockItem">
                             <a class="c-baseLink"
-                               href="{{ url('product_review_admin_product_review_page', { resule: 1 }) }}"><i
+                               href="{{ url('product_review_admin_product_review_page', { resume: 1 }) }}"><i
                                         class="fa fa-backward"
                                         aria-hidden="true"></i><span>{{ 'product_review.admin.product_review_edit.conversion.back'|trans }}</span></a>
                         </div>
