appentTo からdivの指定を削除

--- a/Resource/template/default/review.twig
+++ b/Resource/template/default/review.twig
@@ -66,7 +66,7 @@
 
 <script>
     $(function() {
-        $('#product_review_area').appendTo($('div.ec-layoutRole__main, div.ec-layoutRole__mainWithColumn, div.ec-layoutRole__mainBetweenColumn'));
+        $('#product_review_area').appendTo($('.ec-layoutRole__main, .ec-layoutRole__mainWithColumn, .ec-layoutRole__mainBetweenColumn'));
 
         $('#product_review_area .ec-rectHeading').on('click', function() {
             $content = $('#reviewContent');
